update server name

--- a/coaster.service
+++ b/coaster.service
@@ -3,7 +3,7 @@ Wants=network-online.target
 After=network-online.target
 
 [Service]
-ExecStart=/usr/bin/ssh -tt -o "ServerAliveInterval 20" -o "ServerAliveCountMax 3" -i /home/fri/.ssh/tunnel.id_rsa boxter@metrics.uliza.fm -R 0:localhost:660                                                                                                                      
+ExecStart=/usr/bin/ssh -tt -o "ServerAliveInterval 20" -o "ServerAliveCountMax 3" -i /home/fri/.ssh/tunnel.id_rsa -R 0:localhost:660 boxter@boxter.uliza.fm
 User=fri
 Group=fri
 Restart=always
